--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     },
     "dependencies": {
         "chart.js": "3.3.2",
+        "font-awesome": "^4.7.0",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
-        "primevue": "^3.22.1",
+        "primevue": "^3.36.0",
         "vue": "^3.2.41",
         "vue-router": "^4.1.5"
     },
