--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "axios": "^1.5.1",
         "chart.js": "3.3.2",
         "font-awesome": "^4.7.0",
-        "primeflex": "^3.2.1",
+        "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.37.0",
         "vue": "^3.2.41",
@@ -24,6 +25,7 @@
         "eslint-plugin-vue": "^9.3.0",
         "prettier": "^2.7.1",
         "sass": "^1.55.0",
-        "vite": "^3.1.8"
+        "vite": "^3.1.8",
+        "vite-plugin-vue2": "^2.0.3"
     }
 }
