--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "axios": "^1.5.1",
         "chart.js": "3.3.2",
         "font-awesome": "^4.7.0",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
-        "primevue": "^3.37.0",
+        "primevue": "^3.43.0",
         "vue": "^3.2.41",
         "vue-router": "^4.1.5"
     },
