--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "primeicons": "^6.0.1",
         "primevue": "^3.43.0",
         "vue": "^3.2.41",
+        "vue-numeric-input": "^2.0.0",
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
