--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
         "axios": "^1.5.1",
+        "bootstrap": "^5.3.2",
         "chart.js": "3.3.2",
         "font-awesome": "^4.7.0",
         "primeflex": "^3.3.1",
