--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-VITE_API_TITLE=WEB BUILDER VITE APP
-VITE_API_BASE_URL=http://bekantanjantan.com
-VITE_API_BASE_VERSION=v2
+VITE_API_TITLE=WEB BUILDER COMPANY PROFILE VITE APP
+VITE_API_BASE_URL=http://localhost:9900
+VITE_API_BASE_VERSION=v1
 NODE_ENV=development
