--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
+        "aos": "^2.3.4",
         "axios": "^1.5.1",
         "bootstrap": "^5.3.2",
         "chart.js": "3.3.2",
@@ -22,6 +23,7 @@
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
+        "@types/aos": "^3.0.7",
         "@vitejs/plugin-vue": "^3.1.2",
         "@vue/eslint-config-prettier": "^7.0.0",
         "eslint": "^8.22.0",
