--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "axios": "^1.5.1",
         "bootstrap": "^5.3.2",
         "chart.js": "3.3.2",
+        "express-fileupload": "^1.4.3",
         "font-awesome": "^4.7.0",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.43.0",
         "vue": "^3.2.41",
         "vue-numeric-input": "^2.0.0",
+        "vue-photo-collage": "^1.0.5",
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
