--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.43.0",
+        "sweetalert2": "^11.10.5",
         "vue": "^3.2.41",
         "vue-numeric-input": "^2.0.0",
         "vue-photo-collage": "^1.0.5",
