--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "chart.js": "3.3.2",
         "express-fileupload": "^1.4.3",
         "font-awesome": "^4.7.0",
+        "moment-timezone": "^0.5.45",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.43.0",
